# mcaudioplayer

./: 00Makefile  CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  cmake_install.cmake  mcaudioplayer
include/: commander.h  common.h  tcpserver.h
src/: commander.cpp  mcaudioplayer.cpp  tcpserver.cpp
